# simplettsreader-rs

./: Cargo.toml  Icon48.afphoto  License.txt  build.rs  res.rc
installer/: installer.nsi
src/: lib.rs  main.rs
ui/: app-window.slint
